grammar.js
        plant_uml: $ => choice(
            $._diagram,
            // $.yaml,
        ),

        comment: $ => token(prec(1, choice(
            seq("'", /.*/),
            seq(
                "/'",
                /[^']*'+([^/'][^']*'+)*/,
                '/'
            )
        ))),

        _diagram: $ => seq(
            $._start_uml,
            choice(
                // $._activity_diagram,
                // $.archimate_diagram,
                // $.math_diagram,
                // $.class_diagram,
                // $.deployment_diagram,
                // $.gantt_diagram,
                // $.network_diagram,
                // $.object_diagram,
                $.sequence_diagram,
                // $.state_diagram,
                // $.style_diagram,
                // $.timing_diagram,
                // $.usecase_diagram,
                // $.wbs_diagram,
            ),
            $._end_uml
        ),

        // _activity_diagram: $ => choice($.activity_diagram_legacy, $.activity_diagram_beta),
        // activity_diagram_legacy: $ => 'TODO activity diagram legacy', // https://plantuml.com/activity-diagram-legacy
        // activity_diagram_beta: $ => 'TODO activity diagram beta', // https://plantuml.com/activity-diagram-beta

        // archimate_diagram: $ => 'TODO archimate diagram', // https://plantuml.com/archimate-diagram

        // math_diagram: $ => 'TODO math diagram', // https://plantuml.com/ascii-math

        // class_diagram: $ => 'TODO class diagram', // https://plantuml.com/class-diagram'

        color: $ => // https://plantuml.com/color
            color(),

        // command: $ => 'TODO commands', // https://plantuml.com/commons

        // component: $ => 'TODO component', // https://plantuml.com/component-diagram

        // creole: $ => 'TODO creole markup wrappers', // https://plantuml.com/creole

        // deployment_diagram: $ => 'TODO deployment diagram', // https://plantuml.com/deployment-diagram

        // gantt_diagram: $ => 'TODO gantt diagram', // https://plantuml.com/gantt-diagram

        // json: $ => 'TODO json', // https://plantuml.com/json

        // link: $ => 'TODO links', // https://plantuml.com/link

        // mindmap: $ => 'TODO mindmap', // https://plantuml.com/mindmap-diagram

        // network_diagram: $ => 'TODO nwdiag', // https://plantuml.com/nwdiag

        // object_diagram: $ => 'TODO object diagram', // https://plantuml.com/object-diagram

        // icon: $ => 'TODO OpenIconic', // https://plantuml.com/openiconic

        // preprocessing: $ => 'TODO preoprocessing', // https://plantuml.com/preprocessing

        // salt: $ => 'TODO salt (wireframe)', // https://plantuml.com/salt

        // https://plantuml.com/sequence-diagram -------------------------------------------------------------
        sequence_diagram: $ => // https://plantuml.com/sequence-diagram
            repeat1(
                seq(
                    choice(
                        $._page_heading,
                        $._page_spliting,
                        $._option,
                        $._note,
                        $.reference,
                        $.delay,
                        $.divider,
                        $.space,
                        $.autonumber,
                        $.participant_declaration,
                        $._participant_encompass,
                        $.message,
                        $._io_message,
                        $._lifeline,
                        $.pragma,
                        $.duration,
                    ),
                    '\n',
                )),

        message: $ => seq(
            optional($.anchor),
            $.participant,
            $._communication,
            $.participant,
            optional($._lifeline_shortcut),
            optional(seq(':', optional($.description))),
        ),

        _io_message: $ => alias($.io_message, $.message),
        participant: $ => prec.left(seq(
            choice(
                field('ref', $.name),
                field('ref', $.quoted_name),
                seq(field('ref', $.name), 'as', field('alias', $.quoted_name)),
                seq(field('alias', $.quoted_name), 'as', field('ref', $.name)),
            ),
            optional(alias($.participant_stereotype, $.stereotype)),
        )),
        _participant_encompass: $ => alias($.participant_box, $.box),

        anchor: $ => seq('{', $.name, '}'),

        duration: $ => seq(
            $.anchor,
            $._communication,
            $.anchor,
            optional(seq(':', optional($.description))),
        ),

        name: $ => /\p{ID_Start}\p{ID_Continue}*/,
        quoted_name: $ => seq('"', /[^"\n]+/, '"'),
        _communication: $ => choice(
            $.left_arrow,
            $.bidi_arrow,
            $.right_arrow
        ),
        bidi_arrow: $ => bidi_arrow(),
        right_arrow: $ => right_arrow(),
        left_arrow: $ => left_arrow(),

        right_io_arrow: $ => seq(choice(left_arrow(), right_arrow(), bidi_arrow()), choice(i`]`, i`?`)),
        left_io_arrow: $ => seq(choice(`[`, `?`), choice(left_arrow(i), right_arrow(i), bidi_arrow(i))),

        description: $ => /[^\s][^\n]*/,

        participant_declaration: $ => seq(
            choice(
                'participant',
                'actor',
                'boundary',
                'control',
                'entity',
                'database',
                'collections',
                'queue',
            ),
            optional(seq(field('title', $.participant), 'as')),
            field('reference', $.participant),
            optional(seq('order', field('order', $.order))),
            optional(field('color', $.color)),
        ),
        order: $ => /\d+/,

        autonumber: $ => prec.right(1, seq(
            'autonumber',
            choice(
                seq(
                    optional(seq(
                        field('start', /\d+/),
                        optional(field('increment', /\d+/)),
                    )),
                    optional(field('format', seq('"', /[^"]*/, '"'))),
                ),
                optional(field('command', choice(
                    'stop',
                    seq(
                        'resume',
                        optional(field('increment', /\d+/)),
                        optional(field('format', seq('"', /[^"]*/, '"'))),
                    ),
                ))),
            ),
        )),

        _page_heading: $ => choice(
            seq('title', choice(
                alias($.description, $.page_title),
                seq(
                    '\n',
                    alias(repeat(alias($.title_description, sym('line'))), $.page_title),
                    'end', 'title',
                ),
            )),
            seq('header', alias($.description, $.page_header)),
            seq('footer', alias($.description, $.page_footer)),
        ),

        _page_spliting: $ => seq(
            $.newpage,
        ),

        newpage: $ => seq(
            'newpage',
            optional(alias(/[^\n]+/, $.description)),
        ),

        _note: $ => choice($.note, $.rnote, $.hnote),
        note: $ => note('note', seq('end', 'note'), $.note_description),
        rnote: $ => note('rnote', seq('endrnote'), $.rnote_description),
        hnote: $ => note('hnote', seq('endhnote'), $.hnote_description),

        reference: $ => seq(
            'ref', 'over',
            alias($.name, $.participant),
            optional(seq(
                ',',
                alias($.name, $.participant),
            )),
            choice(
                seq(':', optional($.description)),
                seq(
                    '\n',
                    alias(repeat(alias($.reference_description, $.line)), $.description),
                    seq('end', 'ref'),
                ),
            ),
        ),

        delay: $ => choice(
            '...',
            seq(`...`, alias($.delay_description, $.description), i`...`),
        ),

        divider: $ => seq(`==`, alias($.divider_description, $.description), `==`),
        space: $ => choice(
            '|||',
            seq(`||`, $.pixels, i`||`),
        ),

        pixels: $ => i(/\d+/),

        _lifeline: $ => choice(
            $.activate,
            $.deactivate,
            $.create,
            $.destroy,
            $.return,
        ),

        activate: $ => seq(
            'activate',
            alias($.name, $.participant),
            optional($.color),
        ),
        deactivate: $ => seq(
            'deactivate',
            alias($.name, $.participant),
        ),
        create: $ => seq(
            'create',
            choice(
                alias($.name, $.participant),
                $.participant_declaration,
            ),
        ),
        destroy: $ => seq(
            'destroy',
            alias($.name, $.participant),
        ),
        return: $ => seq(
            'return',
            alias($.name, $.message), // TODO: external token to stop on 'in' or \n to allow multiword message
            optional(seq(
                'in',
                alias($.description, $.scope),
            )),
        ),
        _lifeline_shortcut: $ => choice(
            seq(
                $._lifeline_short_def,
                optional($.color),
            ),
            $.color,
        ),

        pragma: $ => seq(
            '!pragma',
            field('name', 'teoz'),
            field('value', 'true'),
        ),

        // sequence_diagram ----------------------------------------------------------------------------------

        _option: $ => choice(
            $._command,
            $._directive,
        ),

        skinparam: $ => // https://plantuml.com/skinparam ----------------------------------------------------
            choice(
                seq('skinparam', $.name, choice($.value, $.color)),
                seq('skinparam', 'sequence', '{',
                    repeat1(seq($.name, choice($.value, $.color))),
                    '}'
                ),
            ),
        value: $ => /\w+/,

        hide: $ => seq('hide', $.value),
        autoactivate: $ => seq('autoactivate', 'on'),

        // skinparam -----------------------------------------------------------------------------------------

        // sprite: $ => 'TODO sprite', // https://plantuml.com/sprite

        // state_diagram: $ => 'TODO state diagram', // https://plantuml.com/state-diagram

        // style_diagram: $ => 'TODO styles', // https://plantuml.com/style-evolution

        // timing_diagram: $ => 'TODO timing diagram', // https://plantuml.com/timing-diagram

        // usecase_diagram: $ => 'TODO use case diagram', // https://plantuml.com/use-case-diagram

        // wbs_diagram: $ => 'TODO Work Breakdown Structure diagram', // https://plantuml.com/wbs-diagram

        // yaml: $ => 'TODO yaml', // https://plantuml.com/yaml

        // ***************************************************************************************************
