test/corpus/sequence_diagram.txt
================================================================================
Basic examples
================================================================================

@startuml
Alice -> Bob: Authentication Request
Bob --> Alice: Authentication Response

Alice -> Bob: Another authentication Request
Alice <-- Bob: Another authentication Response
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name))
      (description))))

================================================================================
- Basic examples - 1
================================================================================

@startuml
Alice -> Bob: Authentication Request
Bob --> Alice

Alice -> Bob: Another authentication Request
Alice <-- Bob:
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name)))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name)))))

================================================================================
Declaring participant
================================================================================

@startuml
participant participant as Foo
actor       actor       as Foo1
boundary    boundary    as Foo2
control     control     as Foo3
entity      entity      as Foo4
database    database    as Foo5
collections collections as Foo6
queue       queue       as Foo7
Foo -> Foo1 : To actor
Foo -> Foo2 : To boundary
Foo -> Foo3 : To control
Foo -> Foo4 : To entity
Foo -> Foo5 : To database
Foo -> Foo6 : To collections
Foo -> Foo7: To queue
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (participant_declaration
      (participant
        (name))
      (participant
        (name)))
    (participant_declaration
      (participant
        (name))
      (participant
        (name)))
    (participant_declaration
      (participant
        (name))
      (participant
        (name)))
    (participant_declaration
      (participant
        (name))
      (participant
        (name)))
    (participant_declaration
      (participant
        (name))
      (participant
        (name)))
    (participant_declaration
      (participant
        (name))
      (participant
        (name)))
    (participant_declaration
      (participant
        (name))
      (participant
        (name)))
    (participant_declaration
      (participant
        (name))
      (participant
        (name)))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))))

================================================================================
- Declaring participant - 1
================================================================================

@startuml
participant participant as Foo

actor       actor       as Foo1
Foo -> Foo1 : To actor

boundary    boundary    as Foo2
Foo -> Foo2 : To boundary

control     control     as Foo3
Foo -> Foo3 : To control

entity      entity      as Foo4
Foo -> Foo4 : To entity

database    database    as Foo5
Foo -> Foo5 : To database

collections collections as Foo6
Foo -> Foo6 : To collections

queue       queue       as Foo7
Foo -> Foo7: To queue
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (participant_declaration
      (participant
        (name))
      (participant
        (name)))
    (participant_declaration
      (participant
        (name))
      (participant
        (name)))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (participant_declaration
      (participant
        (name))
      (participant
        (name)))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (participant_declaration
      (participant
        (name))
      (participant
        (name)))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (participant_declaration
      (participant
        (name))
      (participant
        (name)))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (participant_declaration
      (participant
        (name))
      (participant
        (name)))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (participant_declaration
      (participant
        (name))
      (participant
        (name)))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (participant_declaration
      (participant
        (name))
      (participant
        (name)))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))))

================================================================================
Declaring participant - with comments and colors
================================================================================

@startuml
actor Bob #red
' The only difference between actor
'and participant is the drawing
participant Alice
participant "I have a really\nlong name" as L #99FF99
/' You can also declare:
   participant L as "I have a really\nlong name"  #99FF99
  '/

Alice->Bob: Authentication Request
Bob->Alice: Authentication Response
Bob->L: Log transaction
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (participant_declaration
      (participant
        (name))
      (color))
    (comment)
    (comment)
    (participant_declaration
      (participant
        (name)))
    (participant_declaration
      (participant
        (quoted_name))
      (participant
        (name))
      (color))
    (comment)
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))))

================================================================================
Declaring participant - order
================================================================================

@startuml
participant Last order 30
participant Middle order 20
participant First order 10
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (participant_declaration
      (participant
        (name))
      (order))
    (participant_declaration
      (participant
        (name))
      (order))
    (participant_declaration
      (participant
        (name))
      (order))))

================================================================================
Use non-letters in participants
================================================================================

@startuml
Alice -> "Bob()" : Hello
"Bob()" -> "This is very\nlong" as Long
' You can also declare:
' "Bob()" -> Long as "This is very\nlong"
Long --> "Bob()" : ok
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (quoted_name))
      (description))
    (message
      (participant
        (quoted_name))
      (right_arrow)
      (participant
        (quoted_name)
        (name)))
    (comment)
    (comment)
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (quoted_name))
      (description))))

================================================================================
Message to Self
================================================================================

@startuml
Alice->Alice: This is a signal to self.\nIt also demonstrates\nmultiline \ntext
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))))

================================================================================
Text alignment - Text of response message below the arrow
================================================================================

@startuml
skinparam responseMessageBelowArrow true
Bob -> Alice : hello
Alice -> Bob : ok
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (skinparam
      (name)
      (value))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))))

================================================================================
Change arrow style
================================================================================

@startuml
Bob ->x Alice
Bob -> Alice
Bob ->> Alice
Bob -\ Alice
Bob \\- Alice
Bob //-- Alice

Bob ->o Alice
Bob o\\-- Alice

Bob <-> Alice
Bob <->o Alice
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name)))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name)))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name)))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name)))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name)))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name)))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name)))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name)))
    (message
      (participant
        (name))
      (bidi_arrow)
      (participant
        (name)))
    (message
      (participant
        (name))
      (bidi_arrow)
      (participant
        (name)))))

================================================================================
Change arrow color
================================================================================

@startuml
Bob -[#red]> Alice : hello
Alice -[#0000FF]->Bob : ok
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (message
      (participant
        (name))
      (right_arrow
        (color))
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow
        (color))
      (participant
        (name))
      (description))))

================================================================================
Message sequence numbering #1
================================================================================

@startuml
autonumber
Bob -> Alice : Authentication Request
Bob <- Alice : Authentication Response
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (autonumber)
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name))
      (description))))

================================================================================
Message sequence numbering #2
================================================================================

@startuml
autonumber
Bob -> Alice : Authentication Request
Bob <- Alice : Authentication Response

autonumber 15
Bob -> Alice : Another authentication Request
Bob <- Alice : Another authentication Response

autonumber 40 10
Bob -> Alice : Yet another authentication Request
Bob <- Alice : Yet another authentication Response

@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (autonumber)
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name))
      (description))
    (autonumber)
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name))
      (description))
    (autonumber)
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name))
      (description))))

================================================================================
Message sequence numbering #3
================================================================================

@startuml
autonumber "<b>[000]"
Bob -> Alice : Authentication Request
Bob <- Alice : Authentication Response

autonumber 15 "<b>(<u>##</u>)"
Bob -> Alice : Another authentication Request
Bob <- Alice : Another authentication Response

autonumber 40 10 "<font color=red><b>Message 0  "
Bob -> Alice : Yet another authentication Request
Bob <- Alice : Yet another authentication Response

@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (autonumber)
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name))
      (description))
    (autonumber)
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name))
      (description))
    (autonumber)
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name))
      (description))))

================================================================================
Message sequence numbering #4
================================================================================

@startuml
autonumber 10 10 "<b>[000]"
Bob -> Alice : Authentication Request
Bob <- Alice : Authentication Response

autonumber stop
Bob -> Alice : dummy

autonumber resume "<font color=red><b>Message 0  "
Bob -> Alice : Yet another authentication Request
Bob <- Alice : Yet another authentication Response

autonumber stop
Bob -> Alice : dummy

autonumber resume 1 "<font color=blue><b>Message 0  "
Bob -> Alice : Yet another authentication Request
Bob <- Alice : Yet another authentication Response
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (autonumber)
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name))
      (description))
    (autonumber)
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (autonumber)
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name))
      (description))
    (autonumber)
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (autonumber)
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name))
      (description))))

================================================================================
Page Title, Header and Footer
================================================================================

@startuml

header Page Header
footer Page %page% of %lastpage%

title Example Title

Alice -> Bob : message 1
Alice -> Bob : message 2

@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (page_header)
    (page_footer)
    (page_title)
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))))

================================================================================
Splitting diagrams
================================================================================

@startuml

Alice -> Bob : message 1
Alice -> Bob : message 2

newpage

Alice -> Bob : message 3
Alice -> Bob : message 4

newpage A title for the\nlast page

Alice -> Bob : message 5
Alice -> Bob : message 6
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (newpage)
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (newpage
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))))

===
--- Grouping message
===

@startuml
Alice -> Bob: Authentication Request

alt successful case

    Bob -> Alice: Authentication Accepted

else some kind of failure

    Bob -> Alice: Authentication Failure
    group My own label
    Alice -> Log : Log attack start
        loop 1000 times
            Alice -> Bob: DNS Attack
        end
    Alice -> Log : Log attack end
    end

else Another type of failure

   Bob -> Alice: Please repeat

end
@enduml

---

(NULL)

===
--- Secondary group label
===

@startuml
Alice -> Bob: Authentication Request
Bob -> Alice: Authentication Failure
group My own label [My own label 2]
    Alice -> Log : Log attack start
    loop 1000 times
        Alice -> Bob: DNS Attack
    end
    Alice -> Log : Log attack end
end
@enduml

---

(NULL)

================================================================================
Notes on messages
================================================================================

@startuml
Alice->Bob : hello
note left: this is a first note

Bob->Alice : ok
note right: this is another note

Bob->Bob : I am thinking
note left
a note
can also be defined
on several lines
end note
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (note
      (position
        (layout))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (note
      (position
        (layout))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (note
      (position
        (layout))
      (description
        (line)
        (line)
        (line)))))

================================================================================
- Notes on messages - aligned descriptions
================================================================================

@startuml
Alice->Bob : hello
note left:   this is a first note


Bob->Alice : ok
note right:  this is another note


Bob->Bob :   I am thinking
note left
    a note
    can also be defined
    on several lines
end note
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (message
      (participant
        ref: (name))
      (right_arrow)
      (participant
        ref: (name))
      (description))
    (note
      (position
        (layout))
      (description))
    (message
      (participant
        ref: (name))
      (right_arrow)
      (participant
        ref: (name))
      (description))
    (note
      (position
        (layout))
      (description))
    (message
      (participant
        ref: (name))
      (right_arrow)
      (participant
        ref: (name))
      (description))
    (note
      (position
        (layout))
      (description
        (line)
        (line)
        (line)))))

================================================================================
Some other notes
================================================================================

@startuml
participant Alice
participant Bob
note left of Alice #aqua
This is displayed
left of Alice.
end note

note right of Alice: This is displayed right of Alice.

note over Alice: This is displayed over Alice.

note over Alice, Bob #FFAAAA: This is displayed\n over Bob and Alice.

note over Bob, Alice
This is yet another
example of
a long note.
end note
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (participant_declaration
      (participant
        (name)))
    (participant_declaration
      (participant
        (name)))
    (note
      (position
        (layout)
        (participant))
      (color)
      (description
        (line)
        (line)))
    (note
      (position
        (layout)
        (participant))
      (description))
    (note
      (position
        (layout)
        (participant))
      (description))
    (note
      (position
        (layout)
        (participant)
        (participant))
      (color)
      (description))
    (note
      (position
        (layout)
        (participant)
        (participant))
      (description
        (line)
        (line)
        (line)))))

================================================================================
Changing notes shape [hnote, rnote]
================================================================================

@startuml
caller -> server : conReq
hnote over caller : idle
caller <- server : conConf
rnote over server
 "r" as rectangle
 "h" as hexagon
endrnote
rnote over server
 this is
 on several
 lines
endrnote
hnote over caller
 this is
 on several
 lines
endhnote
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (hnote
      (position
        (layout)
        (participant))
      (description))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name))
      (description))
    (rnote
      (position
        (layout)
        (participant))
      (description
        (line)
        (line)))
    (rnote
      (position
        (layout)
        (participant))
      (description
        (line)
        (line)
        (line)))
    (hnote
      (position
        (layout)
        (participant))
      (description
        (line)
        (line)
        (line)))))

================================================================================
Note over all participants [across]
================================================================================

@startuml
Alice->Bob:m1
Bob->Charlie:m2
note over Alice, Charlie: Old method for note over all part. with:\n ""note over //FirstPart, LastPart//"".
note across: New method with:\n""note across""
Bob->Alice
hnote across:Note across all part.
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (note
      (position
        (layout)
        (participant)
        (participant))
      (description))
    (note
      (position
        (layout))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name)))
    (hnote
      (position
        (layout))
      (description))))

================================================================================
Several notes aligned at the same level [/] #1
================================================================================

@startuml
note over Alice : initial state of Alice
note over Bob : initial state of Bob
Bob -> Alice : hello
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (note
      (position
        (layout)
        (participant))
      (description))
    (note
      (position
        (layout)
        (participant))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))))

================================================================================
Several notes aligned at the same level [/] #2
================================================================================

@startuml
note over Alice : initial state of Alice
/ note over Bob : initial state of Bob
Bob -> Alice : hello
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (note
      (position
        (layout)
        (participant))
      (description))
    (note
      (align)
      (position
        (layout)
        (participant))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))))

================================================================================
Creole and HTML
================================================================================

@startuml
participant Alice
participant "The **Famous** Bob" as Bob

Alice -> Bob : hello --there--
... Some ~~long delay~~ ...
Bob -> Alice : ok
note left
  This is **bold**
  This is //italics//
  This is ""monospaced""
  This is --stroked--
  This is __underlined__
  This is ~~waved~~
end note

Alice -> Bob : A //well formatted// message
note right of Alice
 This is <back:cadetblue><size:18>displayed</size></back>
 __left of__ Alice.
end note
note left of Bob
 <u:red>This</u> is <color #118888>displayed</color>
 **<color purple>left of</color> <s:red>Alice</strike> Bob**.
end note
note over Alice, Bob
 <w:#FF33FF>This is hosted</w> by <img sourceforge.jpg>
end note
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (participant_declaration
      (participant
        (name)))
    (participant_declaration
      (participant
        (quoted_name))
      (participant
        (name)))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (delay
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (note
      (position
        (layout))
      (description
        (line)
        (line)
        (line)
        (line)
        (line)
        (line)))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (note
      (position
        (layout)
        (participant))
      (description
        (line)
        (line)))
    (note
      (position
        (layout)
        (participant))
      (description
        (line)
        (line)))
    (note
      (position
        (layout)
        (participant)
        (participant))
      (description
        (line)))))

================================================================================
- Creole and HTML
================================================================================

@startuml
participant Alice
participant "The **Famous** Bob" as Bob

note right of Bob #silver :               Foo bar

Alice -> Bob : hello --there--
... Some ~~long delay~~ ...
Bob -> Alice : ok
note left
  This is **bold**
    This is //italics//
        This is ""monospaced""
            This is --stroked--
                This is __underlined__
    This is ~~waved~~
end note

Alice -> Bob : A //well formatted// message
note right of Alice
 This is <back:cadetblue><size:18>displayed</size></back>
 __left of__ Alice.
end note
note left of Bob
 <u:red>This</u> is <color #118888>displayed</color>
 **<color purple>left of</color> <s:red>Alice</strike> Bob**.
end note
note over Alice, Bob
 <w:#FF33FF>This is hosted</w> by <img sourceforge.jpg>
end note
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (participant_declaration
      (participant
        (name)))
    (participant_declaration
      (participant
        (quoted_name))
      (participant
        (name)))
    (note
      (position
        (layout)
        (participant))
      (color)
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (delay
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (note
      (position
        (layout))
      (description
        (line)
        (line)
        (line)
        (line)
        (line)
        (line)))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (note
      (position
        (layout)
        (participant))
      (description
        (line)
        (line)))
    (note
      (position
        (layout)
        (participant))
      (description
        (line)
        (line)))
    (note
      (position
        (layout)
        (participant)
        (participant))
      (description
        (line)))))

================================================================================
Divider or separator
================================================================================

@startuml

== Initialization ==

Alice -> Bob: Authentication Request
Bob --> Alice: Authentication Response

== Repetition ==

Alice -> Bob: Another authentication Request
Alice <-- Bob: another authentication Response

@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (divider
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (divider
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (message
      (participant
        (name))
      (left_arrow)
      (participant
        (name))
      (description))))

================================================================================
Reference
================================================================================

@startuml
participant Alice
actor Bob

ref over Alice, Bob : init

Alice -> Bob : hello

ref over Bob
  This can be on
  several lines
end ref
@enduml

--------------------------------------------------------------------------------

(plant_uml
  (sequence_diagram
    (participant_declaration
      (participant
        (name)))
    (participant_declaration
      (participant
        (name)))
    (reference
      (participant)
      (participant)
      (description))
    (message
      (participant
        (name))
      (right_arrow)
      (participant
        (name))
      (description))
    (reference
      (participant)
      (description
        (line)
        (line)))))
